# fleet

./: .gitignore  README.md  config.sh  main.py  pyproject.toml  requirements.txt
common/: configs.py  dataset_utils.py  loggers.py  static.py
containernet_code/: config.py  experiment_runner.py  my_containernet.py  my_topology.py  utils.py
containernet_code/background_traffic/: background_gen.py  traffic_generators.py  traffic_patterns.py
flcode_pytorch/: client_app.py  my_client_manager.py  my_server.py  server_app.py
flcode_pytorch/utils/: client_metrics_utils.py  configs.py  contexts.py  model_utils.py  strategy_utils.py
static/config/: general.yaml  main.yaml
static/config/dataset/: default.yaml
static/config/fl_client/: default.yaml
static/config/fl_server/: default.yaml
static/config/net/: default.yaml
static/docker/: Dockerfile-BG  Dockerfile-FL
static/scripts/: iperf_runner.py
