[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorchexample"
version = "1.0.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "flcode_pytorch.server_app:app"
clientapp = "flcode_pytorch.client_app:app"

[tool.flwr.federations]
default = "local"

[tool.flwr.federations.local]
address = "0.0.0.0:9093"
insecure = true
